config/ufw/ufw-docker
# add the following to /etc/ufw/after.rules to make ufw and Docker more compatible
# see https://github.com/chaifeng/ufw-docker for more

# BEGIN UFW AND DOCKER

# rules belong to the filter table (default packet filtering)
*filter

# UFW's user-defined forwarding rules
:ufw-user-forward - [0:0]

# define a new chain for logging/denial
:ufw-docker-logging-deny - [0:0]

# Docker's user-defined filter rules
:DOCKER-USER - [0:0]
-A DOCKER-USER -j ufw-user-forward

# allow internal Docker container traffic
-A DOCKER-USER -j RETURN -s 10.0.0.0/8
-A DOCKER-USER -j RETURN -s 172.16.0.0/12

# allow DNS responses
-A DOCKER-USER -p udp -m udp --sport 53 --dport 1024:65535 -j RETURN

# send unwanted connections through the logging/deny chain
-A DOCKER-USER -j ufw-docker-logging-deny -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -d 10.0.0.0/8
-A DOCKER-USER -j ufw-docker-logging-deny -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -d 172.16.0.0/12
-A DOCKER-USER -j ufw-docker-logging-deny -p udp -m udp --dport 0:32767 -d 10.0.0.0/8
-A DOCKER-USER -j ufw-docker-logging-deny -p udp -m udp --dport 0:32767 -d 172.16.0.0/12

# allow everything else
-A DOCKER-USER -j RETURN

# log and drop traffic through the logging/deny chain
-A ufw-docker-logging-deny -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW DOCKER BLOCK] "
-A ufw-docker-logging-deny -j DROP

COMMIT

# END UFW AND DOCKER
